--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -43,7 +43,7 @@ body
   section#home
     .content
       header
-        img#imgHome(height='80' alt='logo')
+        img#imgHome(alt='logo')
         p
           span#typedHome.newlines &nbsp;
     //- +arrow
