--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -111,6 +111,17 @@ body
 
     a.goto-next.scrolly(href='#about')
 
+  //- Twitter
+  //- section#twitter.wrapper.style1.special.fade-up
+  //-   .container
+  //-     header.major
+  //-       h2= lang.twitter.title
+  //-       p= lang.twitter.subtitle
+  //-     .box.alt
+  //-       .row.uniform
+  //-   a.scrolly(href='#contact')
+  //-     i.fas.fa-chevron-down &nbsp;
+
   //- About
   section#about.wrapper.style1.special.fade-up
     .container
