Updated minor bug

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -109,7 +109,7 @@ body
       each line in lang.getInvolved.learnMore.content
         p= line
 
-    a.goto-next.scrolly(href='#about')
+    a.goto-next.scrolly(href='#about') Next
 
   //- Twitter
   //- section#twitter.wrapper.style1.special.fade-up
